# OpenGL_Drone_Navigation

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  opengl-drone-navigation.js
src/config/: config.hpp.in
src/core/: application.cpp  application.h  game.cpp  game.h  game_object.cpp  game_object.h  game_screen.cpp  game_screen.h  input.h  resource_manager.cpp  resource_manager.h
src/physics/: drone_model.cpp  drone_model.h  math_utils.cpp  math_utils.h  model.cpp  model.h  physics_handler.cpp  physics_handler.h  screen_colision.cpp  screen_colision.h
src/renderer/: sprite_renderer.cpp  sprite_renderer.h  sprite_sheet_renderer.cpp  sprite_sheet_renderer.h
src/shaders/: sprite.frag  sprite.vs
src/shading/: shader.cpp  shader.h  texture.cpp  texture.h
src/web/: index.html
